# inventory

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  Taskfile.yml  inventory.spec  main.py  pyproject.toml
.flatpak-builder/cache/refs/heads/x86_64-io.github.inventory.yml/: build-inventory  cleanup  finish  init
.flatpak-builder/checksums/: x86_64-io.github.inventory.yml
.github/workflows/: ci.yml  release.yml
app/: __init__.py  _version.py  dialogs.py  main_window.py  models.py  style.py
db/: __init__.py  alerts.py  config.py  connection.py  queries.py  schema.py
packaging/deb/DEBIAN/: control.tpl
packaging/deb/usr/share/applications/: inventory.desktop
packaging/flatpak/: io.github.inventory.metainfo.xml.tpl  io.github.inventory.yml  io.github.noviopenworks.inventory.desktop  io.github.noviopenworks.inventory.metainfo.xml  io.github.noviopenworks.inventory.metainfo.xml.tpl  io.github.noviopenworks.inventory.yml
packaging/rpm/: inventory.spec.tpl
tests/: conftest.py  helpers.py  test_db.py  test_db_alerts.py  test_db_crud.py  test_db_queries.py  test_db_schema.py  test_dialogs.py  test_main_window.py  test_models.py  test_window.py
